@@ -110,7 +110,8 @@ Interface changes
   smallest number of rows shall be computed by the subgroup detection heuristic
 - new parameter "propagating/symmetry/usedynamicprop" to control if rows of full orbitope
   shall be ordered dynamically in propagation
-
+- new parameter "separating/usecutpoolfilter" to control whether the separation of the cutpools use
+  a dynamic strategy to separate only cuts with comparatively high efficacy
 
 
 ### Data structures
